--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="SitePoint">
   <link rel="stylesheet" href="main.bundle.css">
   <link rel="stylesheet" href="icons.css">
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 
 </head>
 
